# VIforSDEs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: lotka_volterra.py  ornstein_uhlenbeck.py
lotka-volterra/: VI_for_SDEs.py  lotka_volterra_data.py  lotka_volterra_data_augmentation.py  lotka_volterra_example.py  lotka_volterra_loss.py  lotka_volterra_settings.py  network_utils.py
src/variational_sde/: accelerate.py  config.py  console.py  infer.py  visualization.py
src/variational_sde/core/: euler_maruyama.py  observations.py  priors.py  sde.py
src/variational_sde/inference/: constants.py  diffusion_path_sampler.py  evidence_lower_bound.py  exponential_moving_average.py  state_space.py  trainer.py  training_context.py  types.py
src/variational_sde/kernels/: _utils.py  autograd.py  backward.py  constants.py  forward.py  gru_ops.py  helpers.py  indexing.py  weights.py
src/variational_sde/models/: encoder.py  head.py  sde_parameter_posterior.py  variational_sde_posterior.py
src/variational_sde/posterior/: variational_posterior.py
src/variational_sde/primitives/: attn.py  bounds.py  cond.py  embeddings.py  initializer.py  mlp.py  norm.py  sit.py
stubs/triton/: __init__.pyi
stubs/triton/language/: __init__.pyi
stubs/triton/language/extra/: __init__.pyi  libdevice.pyi
